[package]
name = "koriel"
version = "0.1.0"
authors = ["Yuya Kono <takohati0821@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
